fix(program): fix removal of service from scrutor
