# TodoApp-UI/src/app/api/api-client.generated.ts
@@ -18,7 +18,8 @@ export const API_BASE_URL = new InjectionToken<string>('API_BASE_URL');
 export interface ITodoClient {
     getAll(): Observable<TodoItemDto[]>;
     create(title: string): Observable<TodoItemDto>;
-    delete(id?: string | undefined): Observable<FileResponse>;
+    getById(id: string): Observable<TodoItemDto>;
+    delete(id: string): Observable<FileResponse>;
 }
 
 @Injectable()
@@ -130,12 +131,61 @@ export class TodoClient implements ITodoClient {
         return _observableOf<TodoItemDto>(null as any);
     }
 
-    delete(id?: string | undefined): Observable<FileResponse> {
-        let url_ = this.baseUrl + "/api/Todo?";
-        if (id === null)
-            throw new globalThis.Error("The parameter 'id' cannot be null.");
-        else if (id !== undefined)
-            url_ += "id=" + encodeURIComponent("" + id) + "&";
+    getById(id: string): Observable<TodoItemDto> {
+        let url_ = this.baseUrl + "/api/Todo/{id}";
+        if (id === undefined || id === null)
+            throw new globalThis.Error("The parameter 'id' must be defined.");
+        url_ = url_.replace("{id}", encodeURIComponent("" + id));
+        url_ = url_.replace(/[?&]$/, "");
+
+        let options_ : any = {
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Accept": "application/json"
+            })
+        };
+
+        return this.http.request("get", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processGetById(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processGetById(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<TodoItemDto>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<TodoItemDto>;
+        }));
+    }
+
+    protected processGetById(response: HttpResponseBase): Observable<TodoItemDto> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap(_responseText => {
+            let result200: any = null;
+            result200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver) as TodoItemDto;
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap(_responseText => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf<TodoItemDto>(null as any);
+    }
+
+    delete(id: string): Observable<FileResponse> {
+        let url_ = this.baseUrl + "/api/Todo/{id}";
+        if (id === undefined || id === null)
+            throw new globalThis.Error("The parameter 'id' must be defined.");
+        url_ = url_.replace("{id}", encodeURIComponent("" + id));
         url_ = url_.replace(/[?&]$/, "");
 
         let options_ : any = {
